# dave-wang-6c2c-daily-video

./: .env.example  .gitignore  .plan  Cargo.toml  README.md
migrations/: 20260701030500_initialize_database.sql  20260701032200_runs_and_step_state.sql  20260701032700_rotation_state.sql  20260701033000_artifacts_and_published_videos.sql
src/: config.rs  error.rs  lib.rs  main.rs  scheduler.rs  storage.rs
src/db/: mod.rs
src/media/: assemble.rs  frame.rs  mod.rs  render.rs
src/middleware/: auth.rs
src/models/: artifact.rs  mod.rs  rotation.rs  run.rs  video.rs
src/pipeline/: mod.rs
src/providers/: mod.rs
src/providers/image_to_3d/: meshy.rs  mod.rs
src/providers/video/: mod.rs  veo.rs
src/repo/: mod.rs
src/routes/: admin.rs  health.rs  mod.rs  root.rs  videos.rs
tests/: assemble.rs  e2e.rs  meshy.rs  pipeline.rs  repo.rs  veo.rs
