[package]
name = "dave-wang-6c2c-daily-video"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
aws-credential-types = "1.2.10"
aws-sdk-s3 = { version = "=1.80.0", features = ["behavior-version-latest"] }
aws-types = "1.3.10"
axum = "0.8.4"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", default-features = false, features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.4", features = ["serde", "v4"] }
